# tensorflow-yolov4

./: .gitignore  .pylintrc  CHANGELOG  LICENSE.txt  README.md  benchmarks.py  convert_tflite.py  convert_trt.py  detect.py  detectvideo.py  evaluate.py  save_model.py  setup.cfg  setup.py  test.py  train.py
config/: yolov4-tiny-relu.cfg  yolov4-tiny.cfg  yolov4.cfg
core/: backbone.py  config.py  dataset.py  utils.py  yolov4.py
mAP/: main.py
mAP/extra/: intersect-gt-and-pred.py  remove_space.py
py_src/tfyolov4/core/: config.py  dataset.py  utils.py  yolov4.py
py_src/yolov4/: __init__.py
py_src/yolov4/common/: base_class.py  config.py  media.py  parser.py  predict.py
py_src/yolov4/core/: backbone.py  common.py  dataset.py  utils.py  yolov4.py
py_src/yolov4/model/: backbone.py  common.py  head.py  neck.py  yolov4.py
py_src/yolov4/tf/: __init__.py  dataset.py  head.py  layers.py  model.py  train.py  weights.py  yolov4.py
py_src/yolov4/tflite/: __init__.py
py_src/yolov4/utility/: dataset.py  media.py  predict.py  train.py  utils.py  weights.py
scripts/: coco_annotation.py  coco_convert.py
scripts/voc/: voc_convert.py  voc_make_names.py
test/: .gitignore  custom_training_on_colab.ipynb  export.py  mAP_test.ipynb  make_edgetpu_tflite.ipynb  object_detection_in_image.ipynb  test_tpu.py  val2017.txt  yolo_load_dataset_test.ipynb
test/dataset/: val2017.txt
