[metadata]
name = yolov4
url = https://github.com/hhk7734/tensorflow-yolov4
project_urls =
    Documentation = https://github.com/hhk7734/tensorflow-yolov4
    "Source Code" = https://github.com/hhk7734/tensorflow-yolov4

author = Hyeonki Hong
author_email = hhk7734@gmail.com
description =
long-description = file: README.md, CHANGELOG
long_description_content_type = text/markdown
keywords = tensorflow, yolo, AI
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development


[options]
package_dir =
    = py_src
packages = find:
zip_safe = False
setup_requires =
    opencv-python>=4.1.0
    tensorflow>=2.1.0
    numpy
    easydict
    matplotlib
    pillow
install_requires =
    opencv-python>=4.1.0
    tensorflow>=2.1.0
    numpy
    easydict
    matplotlib
    pillow

[options.packages.find]
where = py_src